test/cli/test-validating-policy/http-allow/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: http-allow
spec:
  evaluation:
    mode: HTTP
  validations:
  - expression: >
      http.Allowed().Response()
