test/cli/test-validating-policy/http-allow/request.json
{
    "attributes": {
      "method": "GET",
      "path": "/api/v1/pods",
      "host": "kubernetes.default.svc"
    }
  }
