test/cli/test-validating-policy/http-allow/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
httpPayloads:
- ./request.json
kind: Test
metadata:
  name: vpol-test-http-allow
policies:
- ./policy.yaml
results:
- kind: ""
  policy: http-allow
  result: pass
